--- a/CSS/Section 7 Intermediate CSS/7.1+Combining+Selectors/7.1 Combining Selectors/style.css
+++ b/CSS/Section 7 Intermediate CSS/7.1+Combining+Selectors/7.1 Combining Selectors/style.css
@@ -1,1 +1,27 @@
 /* Write your code here: */
+
+/*group selector*/
+h1,
+h2 {
+  color: blueviolet;
+}
+
+/*child selector*/
+.box > p {
+    color: firebrick;
+}
+
+/*descendant selector*/
+.box li {
+  color: blue;
+}
+
+/*chaining selector*/
+li.done {
+  color: seagreen;
+}
+
+/*combining selector*/
+ul p.done {
+  font-size: .5rem;
+}
